2026-01-31T01:40:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21536550248 # 1412
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-31
* notice: last 14d: unq all: 25 52
* notice: prev accum: outdated-unq outdated-all / unq all: 3135 5571 / 3162 5625
* notice: next accum: outdated-unq outdated-all / unq all: 3135 5571 / 3160 5623
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-01-30T12:44:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21516244512 # 1411
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
* notice: last 14d: unq all: 27 54
* notice: prev accum: outdated-unq outdated-all / unq all: 3133 5569 / 3158 5621
* notice: next accum: outdated-unq outdated-all / unq all: 3135 5571 / 3162 5625
* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [2026-01-14 2026-01-15] / [2026-01-28 2026-01-29]

2026-01-29T01:43:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21462392558 # 1408
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
* notice: last 14d: unq all: 25 52
* notice: prev accum: outdated-unq outdated-all / unq all: 3123 5559 / 3133 5569
* notice: next accum: outdated-unq outdated-all / unq all: 3133 5569 / 3158 5621
* notice: prev exec diff / last date diff / accum: unq all: +25 +52 -0 -0 / +1 +1 -0 -0 / 1 1