@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2026-01-31T01:40:17Z",
-  "count_outdated" : 5571,
-  "uniques_outdated" : 3135,
-  "count" : 5623,
-  "uniques" : 3160,
+  "timestamp" : "2026-01-31T12:38:02Z",
+  "count_outdated" : 5572,
+  "uniques_outdated" : 3136,
+  "count" : 5626,
+  "uniques" : 3163,
   "clones" : [
-    {
-      "timestamp": "2026-01-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2026-01-16T00:00:00Z",
       "count": 2,
@@ -130,6 +121,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2026-01-29T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
