@@ -1,12 +1,7 @@
 {
-  "count": 52,
-  "uniques": 25,
+  "count": 54,
+  "uniques": 27,
   "clones": [
-    {
-      "timestamp": "2026-01-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2026-01-16T00:00:00Z",
       "count": 2,
@@ -71,6 +66,11 @@
       "timestamp": "2026-01-28T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2026-01-29T00:00:00Z",
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
