@@ -1,3 +1,12 @@
+2026-01-31T12:38:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21544594942 # 1413
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-31
+* notice: last 14d: unq all: 27 54
+* notice: prev accum: outdated-unq outdated-all / unq all: 3135 5571 / 3160 5623
+* notice: next accum: outdated-unq outdated-all / unq all: 3136 5572 / 3163 5626
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-15] / []
+
 2026-01-31T01:40:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21536550248 # 1412
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-31
